mobile keyboard collapse fixed

--- a/frontend/src/components/CreateKudoForm/CreateKudoForm.module.scss
+++ b/frontend/src/components/CreateKudoForm/CreateKudoForm.module.scss
@@ -1,6 +1,8 @@
 .formWrapper {
     padding: 3vh 1.625em 0 1.625em;
     flex-grow: 1;
+    flex-shrink: 0;
+    // min-height: 80vh;
     position: relative;
 
     .imageHolder {
@@ -49,7 +51,7 @@
     }
 
     .to {
-        margin: 7vh 10% 0 10%;
+        margin: 7% 10% 7% 10%;
 
         label {
             display: block;
