--- a/frontend/src/styles/NewKudo.module.scss
+++ b/frontend/src/styles/NewKudo.module.scss
@@ -3,13 +3,14 @@
     flex-direction: column;
 
     height: 100%;
+    // min-height: 100vh;
 }
 
 .buttonHolder {
     width: 100%;
     display: flex;
     border-top: 0.15em solid var(--grey);
-    height: 8vh;
+    // height: 8vh;
     align-items: center;
 
     button, a {
